# nmpde-fluid-structure-interaction

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  README.md
.github/workflows/: verify_build.yml
mesh/: Makefile  mesh_fsi.msh  mesh_fsi_geo.geo
scripts/: compare_solution_runs.sh
src/: FSIProblem.cpp  FSIProblem.hpp  Poisson1D.cpp  exerciseFSI.cpp  lab-01.cpp
